font changed throughout app to spotify font

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,29 @@
 
 @custom-variant dark (&:is(.dark *));
 
+/* Spotify Typography - Global Font Stack */
+:root, html, body {
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, "Noto Sans", "Liberation Sans", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+/* Inherit font family for all elements */
+* {
+  font-family: inherit;
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+button, .btn,
+.app-title {
+  font-weight: 700;
+}
+
 :root {
 	--radius: 0.625rem;
 	--background: oklch(1 0 0);
